# stock_anomaly_detection

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: StockAnomalyDetection.ipynb
